# SpeedDreams

data/drivers/dandroid_sc/: CMakeLists.txt  dandroid_sc.xml
data/drivers/dandroid_sc/17/: skill.xml
data/drivers/dandroid_sc/3/: skill.xml
data/drivers/dandroid_sc/sc-boxer-96/: brondehach.xml  chemisay.xml  espie.xml  forza.xml
data/drivers/dandroid_sc/sc-cavallo-360/: _all_tracks.xml  brondehach.xml  chemisay.xml  espie.xml  forza.xml  hidden-valley.xml  karwada.xml  melbourne.xml
data/drivers/dandroid_sc/sc-deckard-conejo/: brondehach.xml  espie.xml  forza.xml  sao-paulo.xml
data/drivers/dandroid_sc/sc-fmc-gt4/: brondehach.xml  chemisay.xml  forza.xml  longday.xml
data/drivers/dandroid_sc/sc-kanagawa-z35gts/: brondehach.xml  chemisay.xml  espie.xml  forza.xml
data/drivers/human/: car.xml  human.xml  preferences.xml
data/drivers/networkhuman/: car.xml
data/drivers/shadow_sc/: shadow_sc.xml
data/drivers/shadow_sc/sc-boxer-96/: default.xml  longday.xml
data/drivers/shadow_sc/sc-cavallo-360/: default.xml  espie.xml  forza.xml  longday.xml
data/drivers/shadow_sc/sc-deckard-conejo/: brondehach-17.xml  brondehach.xml  chemisay.xml  default.xml  espie.xml  forza.xml  longday.xml  melbourne.xml
data/drivers/shadow_sc/sc-fmc-gt4/: default.xml  forza.xml  longday.xml
data/drivers/shadow_sc/sc-kanagawa-z35gts/: default.xml  longday.xml
data/drivers/shadow_sc/sc-kongei-kk8s/: default.xml  longday.xml
data/drivers/shadow_sc/sc-lynx-220/: longday.xml
data/drivers/shadow_sc/sc-murasama-nsx/: default.xml  espie.xml  longday.xml
data/drivers/shadow_sc/sc-spirit-300/: longday.xml
data/drivers/simplix/: simplix.xml
data/drivers/simplix_sc/: simplix_sc.xml
data/drivers/simplix_sc/sc-cavallo-360/: melbourne.xml
data/drivers/usr_sc/: usr_sc.xml
data/drivers/usr_sc/sc-boxer-96/: forza.xml
data/drivers/usr_sc/sc-cavallo-360/: longday.xml
data/drivers/usr_sc/sc-deckard-conejo/: default.xml  espie.xml  (+2 more)
data/tracks/circuit/: CMakeLists.txt
doc/userman/: how_to_drive.html
src/drivers/networkhuman/: CMakeLists.txt  networkhuman.cpp
src/drivers/simplix/: CMakeLists.txt
src/interfaces/: CMakeLists.txt  car.h  graphic.h  isoundengine.h  playerpref.h  raceman.h  robot.h  sound.h  track.h
src/libs/ephemeris/: CMakeLists.txt
src/libs/learning/: policy.cpp  string_utils.cpp
src/libs/portability/: portability.cpp  portability.h
src/libs/robottools/: CMakeLists.txt  humandriver.h  rthumandriver.cpp  rtteammanager.cpp  rttelem.cpp  rttrack.cpp  rtutil.cpp  timeanalysis.h
src/libs/tgf/: CMakeLists.txt  application.cpp  eventloop.cpp  file.cpp  linuxspec.cpp  memmanager.cpp  modinfo.cpp  module.cpp  osspec.h  params.cpp  tgf.cpp  tgf.h  tgf.hpp  trace.cpp  windowsspec.cpp
src/libs/tgfclient/: CMakeLists.txt  control.cpp  forcefeedback.cpp  forcefeedback.h  glfeatures.cpp  glfeatures.h  gui.cpp  gui.h  guibutton.cpp  guicheckbox.cpp  guiedit.cpp  guieventloop.cpp  guifont.cpp  guihelp.cpp  guiimage.cpp  guilabel.cpp  guimenu.cpp  guimenusfx.cpp  guimenusfx.h  guiobject.cpp  guiscreen.cpp  guiscreen.h  guiscrollbar.cpp  guiscrollist.cpp  guitexture.cpp  musicplayer.cpp  musicplayer.h  sdl2musicplayer.cpp  sdl2musicplayer.h  tgfclient.h  webserver.cpp  webserver.h
src/libs/tgfdata/: cars.cpp  cars.h  drivers.cpp  race.cpp  racemanagers.cpp  racemanagers.h  tracks.cpp
src/main/: CMakeLists.txt  main.cpp
src/modules/networking/: CMakeLists.txt  client.cpp  network.cpp  server.cpp
src/tools/: CMakeLists.txt
src/tools/accc/: ac3dgroup.cpp  ac3dload.cpp  accc.h  mainaccc.cpp
src/tools/trackeditor/: CMakeLists.txt
src/tools/trackeditor/gui/: CheckDialog.java  DefaultObjectsDialog.java  DefaultSurfacesDialog.java  DeltaPanel.java  EditorFrame.java  NewProjectDialog.java  PreferencesDialog.java  TrackgenPanel.java
src/tools/trackeditor/gui/properties/: CameraProperties.java  EnvMapProperties.java  GeneralProperties.java  GraphicProperties.java  ImageProperties.java  LocalInfoProperties.java  ObjectProperties.java  PitProperties.java  PropertiesDialog.java  PropertyPanel.java  SectorProperties.java  StartingGridProperties.java  SurfaceProperties.java  TerrainProperties.java  TrackLightProperties.java  TrackProperties.java  TurnMarksProperties.java
src/tools/trackeditor/gui/segment/: GroupButton.java  ProfileButton.java  SegmentEditorDlg.java  SegmentSideProperties.java  SegmentSlider.java  SliderListener.java
src/tools/trackeditor/gui/splash/: SplashPanel.java  SplashScreen.java  StatusBar.java
src/tools/trackeditor/gui/view/: CircuitView.java  CircuitViewSelectionEvent.java  CircuitViewSelectionListener.java
src/tools/trackeditor/miscel/: EPMath.java  TCPopupEventQueue.java
src/tools/trackeditor/plugin/torcs/: NoOpEntityResolver.java  XMLOutput.java  XmlReader.java  XmlWriter.java
src/tools/trackeditor/utils/: CustomFileFilter.java  Editor.java  EditorPoint.java  GroupButtonLayout.java  Project.java  Properties.java  SegmentSliderLayout.java  SegmentVector.java  SurfaceComboBox.java  TrackData.java  TrackEditor.java
src/tools/trackeditor/utils/ac3d/: Ac3d.java  Ac3dException.java  Ac3dMaterial.java  Ac3dObject.java  Ac3dSurface.java
src/tools/trackeditor/utils/circuit/: Camera.java  Curve.java  EnvironmentMapping.java  Graphic.java  Header.java  LocalInfo.java  MainTrack.java  ObjShapeHandle.java  ObjShapeObject.java  ObjShapeTerrain.java  ObjectMap.java  Pits.java  Sector.java  Segment.java  SegmentListener.java  SegmentSide.java  SegmentSideListener.java  StartingGrid.java  Straight.java  Surface.java  TerrainGeneration.java  TrackLight.java  TrackObject.java  TurnMarks.java  XmlObjPits.java
src/tools/trackeditor/utils/undo/: Undo.java  UndoAddSegment.java  UndoDeleteSegment.java  UndoInterface.java  UndoSegmentChange.java  UndoSplitSegment.java
src/tools/trackgen/: CMakeLists.txt  ac3d.cpp  ac3d.h  easymesh.cpp  easymesh.h  elevation.cpp  elevation.h  main.cpp  objects.cpp  objects.h  raceline.cpp  relief.cpp  relief.h  testtrackgen.sh  track.cpp  trackgen.h  util.cpp  util.h
src/tools/xmlversion/: CMakeLists.txt
(+248 files in other folders)
